# motion-extractor

./: .gitignore  CODE_REVIEW.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
config/: settings.json
docs/: INTERACTIVE_CONTROLS.md
src/: __init__.py  camera_stream.py  config.py  control_window.py  controls_manager.py  display_overlay.py  main.py  motion_extractor.py  qt_main.py  qt_window.py
src/config/: settings.json
tests/: __init__.py  test_camera_stream.py  test_control_window.py  test_controls_manager.py  test_motion_extractor.py  test_motion_extractor_dynamic.py
